tests/NormalTests/paczka1/fuzzy1/31131319.err
Error in line 2: 9rDdG5 A739 50,9
Error in line 19: 9rDdG5 S25 54,4
Error in line 18: 1vapr S25 61,7
Error in line 25: A507 A739 9,3
Error in line 31: A507 A507 62,0
Error in line 36: A507 A739 12,8
